--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "md-link-reporter",
-  "version": "1.0.0",
+  "name": "markdown-link-reporter",
+  "version": "1.0.3",
   "description": "A module for finding broken local markdown links.",
   "main": "dist/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ceckenrode/markdown-link-reporter.git"
+  },
   "bin": {
-    "markdown-link-reporter": "bin/index"
+    "md-report": "bin/index"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +23,7 @@
   "devDependencies": {
     "@types/chalk": "^0.4.31",
     "@types/glob": "^5.0.30",
-    "@types/lodash": "^4.14.65"
+    "@types/lodash": "^4.14.65",
+    "typescript": "^2.3.4"
   }
 }
